# soupaw

./: README.md  pyproject.toml
src/soupaw/: __init__.py  get_response.py  get_soup.py  page_soup.py  soup_selectors.py
