[project]
name = "soupaw"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "paw", email = "pawrequest@users.noreply.github.com" }
]
dependencies = [
    'bs4',
    'aiohttp',


]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
